# danish-stt

./: .gitignore  404.html  README.md  client.py  compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architecture/: deployment-diagram.puml  stream_audio_and_broadcast_live_transcriptions_to_all_subscribers.puml
docs/architecture/: deployment-diagram.puml  start_a_live_transcription_session_and_subscribe_clients.puml  stream_audio_and_broadcast_live_transcriptions_to_all_subscribers.puml
reference/src/: index.html
reference/src/vad_service/: index.html
search/: search_index.json
src/: dao.py  server.py  stt_service.py  vad_service.py
tests/: test_vad.py
