[project]
name = "danish-stt"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = [
    "fastapi>=0.116.1",
    "gradio>=5.44.1",
    "loguru>=0.7.3",
    "redis>=6.4.0",
    "silero-vad>=6.0.0",
    "uvicorn>=0.35.0",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]


[tool.pytest.ini_options]
addopts = "-m 'not slow'"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
